<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".CommentActivity">

    <Button
        android:id="@+id/add_comment"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundshape"
        android:text="@string/Save"
        android:onClick="SaveComment"
        app:layout_constraintStart_toStartOf="@+id/comments"
        app:layout_constraintTop_toBottomOf="@+id/comments" />

    <Button
        android:id="@+id/check_history"
        android:layout_width="380dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundshape"
        android:onClick="BrowseComments"
        android:text="@string/BrowseComments"
        app:layout_constraintStart_toStartOf="@+id/add_comment"
        app:layout_constraintTop_toBottomOf="@+id/add_comment"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="379dp"
        android:layout_height="237dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/AddComment"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lakename"
        app:layout_constraintTop_toBottomOf="@+id/lakename"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/lakename"
        android:layout_width="378dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/LakeName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>