<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".LoginScreen">

    <Button
        android:id="@+id/login_loginbutton2"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/teal_200"
        android:hapticFeedbackEnabled="true"
        android:onClick="OnClickChangeLanguage"
        android:text="@string/change_language"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_loginbutton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/prompt_password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />

    <Button
        android:id="@+id/login_loginbutton"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/teal_200"
        android:hapticFeedbackEnabled="true"
        android:onClick="OnclickLogin"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/login_username"
        app:layout_constraintStart_toStartOf="@+id/login_username"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/login_username"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="329dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="323dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:onClick="OnClickRegister"
        android:text="@string/no_user_msg"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>