<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:padding="10dp"
    tools:context=".RegistrationScreen">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="98dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/prompt_password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/Username"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="98dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/prompt_password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="98dp"
        android:layout_height="23dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="329dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RePassword"
        android:layout_width="295dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="297dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="301dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundshape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/Register"
        android:layout_width="208dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="OnClickRegister"
        android:text="@string/Register"
        app:layout_constraintEnd_toEndOf="@+id/RePassword"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/RePassword"
        app:layout_constraintTop_toBottomOf="@+id/RePassword" />
</androidx.constraintlayout.widget.ConstraintLayout>