<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:gravity="fill"
        android:text="@string/KuntaName"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:gravity="fill"
        android:text="@string/KuntaName"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:gravity="fill"
        android:text="@string/AvgDepth"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:gravity="fill"
        android:text="@string/KuntaName"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:id="@+id/lakename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/kuntaname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/lakename" />

    <TextView
        android:id="@+id/avgDepth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/kuntaname" />

    <TextView
        android:id="@+id/shorelength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/avgDepth" />

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="@+id/shorelength" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:gravity="fill"
        android:text="@string/LakeName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="7dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="206dp" />

</androidx.constraintlayout.widget.ConstraintLayout>